--- a/Covid-19CasesPlotting/index.html
+++ b/Covid-19CasesPlotting/index.html
@@ -46,77 +46,79 @@
         .then(rsp => {
             rsp.data.forEach(element => {
 
-                longitude = element.longitude;
-                latitude = element.latitude;
-                cases = element.infected;
-                city = element.name;
+                    longitude = element.longitude;
+                    latitude = element.latitude;
+                    cases = element.infected;
+                    city = element.name;
 
-                function loadData(x, y) {
 
+                    // longitude, latitude, infected, name
                     map.on('load', () => {
-                        map.addSource('places', {
-                            'type': 'geojson',
-                            'data': {
-                                'type': 'FeatureCollection',
-                                'features': [{
-                                    'type': 'Feature',
-                                    'properties': {
-                                        'description': `<strong>${city}</strong><p>Present Cases: ${cases}</p>`
-                                    },
-                                    'geometry': {
-                                        'type': 'Point',
-                                        'coordinates': [longitude, latitude]
+                        rsp.data.forEach(element => {
+                                map.addSource('places', {
+                                    'type': 'geojson',
+                                    'data': {
+                                        'type': 'FeatureCollection',
+                                        'features': [{
+                                            'type': 'Feature',
+                                            'properties': {
+                                                'description': `<strong>${element.name}</strong><p>Present Cases: ${element.infected}</p>`
+                                            },
+                                            'geometry': {
+                                                'type': 'Point',
+                                                'coordinates': [element.longitude, element.latitude]
+                                            }
+                                        }]
                                     }
-                                }]
-                            }
-                        });
+                                });
+                            }),
 
-                        // Add a layer showing the places.
-                        map.addLayer({
-                            'id': 'places',
-                            'type': 'circle',
-                            'source': 'places',
-                            'paint': {
-                                'circle-color': `rgb(${cases},0,0)`,
-                                'circle-radius': 6,
-                                'circle-stroke-width': 3,
-                                'circle-stroke-color': '#ffffff'
-                            }
-                        });
+                            // Add a layer showing the places.
+                            map.addLayer({
+                                'id': 'places',
+                                'type': 'circle',
+                                'source': 'places',
+                                'paint': {
+                                    'circle-color': `rgb(${cases},0,0)`,
+                                    'circle-radius': 6,
+                                    'circle-stroke-width': 3,
+                                    'circle-stroke-color': '#ffffff'
+                                }
+                            });
+
                     });
+                } // loadData end
+            ); // forEach end
+
+            // Create a popup, but don't add it to the map yet.
+            const popup = new mapboxgl.Popup({
+                closeButton: false,
+                closeOnClick: false
+            });
+
+            map.on('mouseenter', 'places', (e) => {
+                // Change the cursor style as a UI indicator.
+                // map.getCanvas().style.cursor = 'pointer';
+
+                // Copy coordinates array.
+                const coordinates = e.features[0].geometry.coordinates.slice();
+                const description = e.features[0].properties.description;
+
+                // Ensure that if the map is zoomed out such that multiple
+                // copies of the feature are visible, the popup appears
+                // over the copy being pointed to.
+                while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
+                    coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
                 }
-                loadData(longitude, latitude);
 
-                // Create a popup, but don't add it to the map yet.
-                const popup = new mapboxgl.Popup({
-                    closeButton: false,
-                    closeOnClick: false
-                });
+                // Populate the popup and set its coordinates
+                // based on the feature found.
+                popup.setLngLat(coordinates).setHTML(description).addTo(map);
+            });
 
-                map.on('mouseenter', 'places', (e) => {
-                    // Change the cursor style as a UI indicator.
-                    map.getCanvas().style.cursor = 'pointer';
-
-                    // Copy coordinates array.
-                    const coordinates = e.features[0].geometry.coordinates.slice();
-                    const description = e.features[0].properties.description;
-
-                    // Ensure that if the map is zoomed out such that multiple
-                    // copies of the feature are visible, the popup appears
-                    // over the copy being pointed to.
-                    while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-                        coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
-                    }
-
-                    // Populate the popup and set its coordinates
-                    // based on the feature found.
-                    popup.setLngLat(coordinates).setHTML(description).addTo(map);
-                });
-
-                map.on('mouseleave', 'places', () => {
-                    map.getCanvas().style.cursor = '';
-                    popup.remove();
-                });
+            map.on('mouseleave', 'places', () => {
+                map.getCanvas().style.cursor = '';
+                popup.remove();
             });
         })
 </script>
